--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "1.5.0",
   "description": "test assessment book service",
   "type": "module",
-  "packageManager": "pnpm@8.15.4",
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -31,7 +30,7 @@
     "fastify",
     "typescript"
   ],
-  "author": "Yonatan Bendahan",
+  "author": "Eugene Geyman",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/yonathan06/fastify-typescript-starter/issues"
